# ws-tool

./: .gitignore  Cargo.toml  Pipfile  README.md  arch.md  frame.md  output.json  protocol.md  usage.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: mps.rs  server_benchmark.js
examples/: autobahn-client.rs  autobahn_async_client.rs  autobahn_async_deflate_client.rs  autobahn_client.rs  autobahn_deflate_client.rs  bench_async_server.rs  bench_deflate_server.rs  bench_fastwebsockets.rs  bench_server.rs  bench_server_new.rs  bench_server_split.rs  bench_tungstenite.rs  binance.rs  binance.rsx  c.rs  compress.rs  deflate_client.rs  deflate_server.rs  echo.rs  echo_async_server.rs  echo_server.rs  ext_axum.rs  gen_cert.rs  load_test.rs  poem.rs  raw.rs  server.rs  split_binance.rs  tls_proxy_deflate_client.rs
ffi/py/: Cargo.toml  pyproject.toml
ffi/py/.env/: pyvenv.cfg
ffi/py/examples/: client.py  server.py
ffi/py/src/: lib.rs
http_shim/: Cargo.toml
http_shim/src/: lib.rs
scripts/: build.sh  build_examples.sh  client.py  gen_cert.sh  ssl_server.py  start_autobahn_server.sh  start_client_examples.sh
src/: codec.rs  config.rs  connector.rs  errors.rs  extension.rs  frame.rs  lib.rs  main.rs  message.rs  protocol.rs  proxy.rs  shim.rs  simple.rs  stream.rs
src/codec/: binary.rs  deflate.rs  frame.rs  mod.rs  non_block.rs  sync.rs  text.rs
src/codec/binary/: blocking.rs  mod.rs  non_blocking.rs
src/codec/deflate/: blocking.rs  mod.rs  non_blocking.rs  ziplib.rs
src/codec/frame/: blocking.rs  mod.rs  non_blocking.rs
src/codec/text/: blocking.rs  mod.rs  non_blocking.rs
test_config/: fuzzingserver copy.json  fuzzingserver.json
tests/: bit_op.rs
