[package]
name = "ws-tool"
version = "0.8.1"
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2021"
description = "an easy to use websocket tool"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/PrivateRookie/ws-tool"
repository = "https://github.com/PrivateRookie/ws-tool"
keywords = ["websocket", "proxy", "network"]

# [profile.release]
# debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
thiserror = "1"
rand = "0.8"
base64 = "0.20"
tracing = "0.1"
bytes = "1"
httparse = "1.8"
sha1 = "0.10"
simdutf8 = "0.1.4"

tokio = { version = "1", features = ["rt", "net", "io-util"], optional = true }


# tls deps
tokio-rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "1.0.1", optional = true }
webpki = { version = "0.22", optional = true }
webpki-roots = { version = "0.22.5", optional = true }
rustls-connector = { version = "0.16", optional = true, features = [
    "webpki-roots-certs",
] }

# deflate deps
libz-sys = { version = "1.1.8", optional = true }

# proxy deps


[features]
default = ["sync"]
sync = []
sync_tls_rustls = ["sync", "rustls-connector"]
async = ["tokio"]
async_tls_rustls = [
    "async",
    "tokio-rustls",
    "webpki",
    "webpki-roots",
    "rustls-pemfile",
    "rustls-connector",
]
deflate = ["libz-sys"]
deflate_static = ["libz-sys/static"]
deflate_ng = ["libz-sys/zlib-ng"]

[dev-dependencies]
fastrand = "2.0.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
rcgen = "0.8"
dashmap = { version = "5.4.0", features = ["serde"] }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
hproxy = { version = "0.1", features = ["sync", "async"] }
sproxy = { version = "0.1", features = ["sync", "async"] }
tabled = "0.13.0"
# benchmark deps
tungstenite = "0.20.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mps"
harness = false