[workspace]
package.version = "0.10.3"
members = [".", "ffi/py", "http_shim"]

[package]
name = "ws-tool"
version.workspace = true
authors = ["PrivateRookie <996514515@qq.com>"]
edition = "2021"
description = "an easy to use websocket tool"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/PrivateRookie/ws-tool"
repository = "https://github.com/PrivateRookie/ws-tool"
keywords = ["websocket", "proxy", "network"]

# [profile.release]
# debug = true
# strip = false
# opt-level = 3
# lto = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { path = "http_shim", optional = true, version = "0.10" }
thiserror = "1"
rand = "0.8"
base64 = "0.20"
tracing = "0.1"
bytes = "1"
httparse = "1.8"
sha1 = "0.10"
simdutf8 = "0.1.4"

tokio = { version = "1", features = ["rt", "net", "io-util"], optional = true }


# tls deps
tokio-rustls = { version = "0.23", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
rustls-pemfile = { version = "1.0.1", optional = true }
webpki = { version = "0.22", optional = true }
webpki-roots = { version = "0.22.5", optional = true }
rustls-connector = { version = "0.16", optional = true, features = [
    "webpki-roots-certs",
] }
native-tls = { version = "0.2", optional = true }

# deflate deps
libz-sys = { version = "1.1.8", optional = true }
# extsion deps
poem = { version = "1", optional = true }
axum = { version = "0.7", optional = true }
hyper = { version = "1", optional = true }
hyper-util = { version = "0.1", optional = true }
# proxy deps


[features]
default = ["sync", "simple", "sync_tls_rustls", "http/old"]
sync = []
sync_tls_rustls = ["sync", "rustls-connector", "rustls-pemfile"]
sync_tls_native = ["sync", "native-tls"]
async = ["tokio"]
async_tls_rustls = [
    "async",
    "tokio-rustls",
    "webpki",
    "webpki-roots",
    "rustls-pemfile",
    "rustls-connector",
]
async_tls_native = ["async", "tokio-native-tls"]
deflate = ["libz-sys"]
deflate_static = ["libz-sys/static"]
deflate_ng = ["libz-sys/zlib-ng"]
poem = ["dep:poem", "async", "http/old"]
axum = ["dep:axum", "dep:hyper", "dep:hyper-util", "async", "http/new"]
simple = ["deflate"]


[dev-dependencies]
fastrand = "2.0.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
rcgen = "0.11"
dashmap = { version = "5.4.0", features = ["serde"] }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
hproxy = { version = "0.1", features = ["sync", "async"] }
sproxy = { version = "0.1", features = ["sync", "async"] }
tabled = "0.13.0"
socks = "0.3.4"
# benchmark deps
tungstenite = "0.20.0"
criterion = { version = "0.5", features = ["html_reports"] }
fastwebsockets = { version = "0.5.0", features = ["upgrade"] }
hyper = "0.14.27"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rayon = "1.8.0"
