[package]
name = "http"
edition = "2021"
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http1_0 = { package = "http", version = "1" }
http0_x = { package = "http", version = "0.*" }

[features]
default = []
old = []
new = []
