[package]
name = "http_shim"
edition = "2021"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http1_0 = { package = "http", version = "1" }
http0_x = { package = "http", version = "0.2" }

[features]
default = []
old = []
new = []
